--- a/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-default.json
+++ b/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-default.json
@@ -58,6 +58,9 @@
         },
         "job_positions" : {
           "type" : "keyword"
+        },
+        "is_rehired" : {
+          "type" : "boolean"
         }
     }
 }
