--- a/docs/changelog/95170.yaml
+++ b/docs/changelog/95170.yaml
@@ -1,5 +1,5 @@
 pr: 95170
-summary: Ensure checking indices privileges work with nested-limited-role
+summary: Ensure checking indices privileges works with nested-limited-role
 area: Authorization
 type: enhancement
 issues: []
