--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/3rd_party_deployment.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/3rd_party_deployment.yml
@@ -379,3 +379,11 @@ setup:
         model_alias: "pytorch"
         model_id: "another_test_model"
         reassign: true
+
+---
+"Test include model definition status":
+  - do:
+      ml.get_trained_models:
+        model_id: test_model
+        include: download_status
+  - match: { trained_model_configs.0.is_fully_downloaded: true }
