--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/inference_crud.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/inference_crud.yml
@@ -1178,3 +1178,39 @@ setup:
               }
             }
           }
+
+---
+"Test include model definition status":
+  - do:
+      ml.put_trained_model:
+        model_id: model-without-definition
+        body: >
+          {
+            "model_type": "pytorch",
+            "inference_config": {
+              "ner": {
+              }
+            }
+          }
+
+  - do:
+      ml.get_trained_models:
+        model_id: model-without-definition
+        include: download_status
+  - match: { count: 1 }
+  - match: { trained_model_configs.0.is_fully_downloaded: false }
+  - do:
+      ml.get_trained_models:
+        model_id: model-without-definition
+  - match: { count: 1 }
+  - match: { trained_model_configs.0.is_fully_downloaded: null }
+  - do:
+      catch: /Getting the model download status is not supported when getting more than one model/
+      ml.get_trained_models:
+        model_id: _all
+        include: download_status
+  - do:
+      catch: /The download status is only relevant to PyTorch model types/
+      ml.get_trained_models:
+        model_id: a-regression-model-0
+        include: download_status
