--- a/x-pack/plugin/esql/qa/server/single-node/src/yamlRestTest/resources/rest-api-spec/test/40_tsdb.yml
+++ b/x-pack/plugin/esql/qa/server/single-node/src/yamlRestTest/resources/rest-api-spec/test/40_tsdb.yml
@@ -66,7 +66,7 @@ load everything:
   - match: {columns.0.name: "@timestamp"}
   - match: {columns.0.type: "date"}
   - match: {columns.1.name: "k8s.pod.ip"}
-  - match: {columns.1.type: "unsupported"}
+  - match: {columns.1.type: "ip"}
   - match: {columns.2.name: "k8s.pod.name"}
   - match: {columns.2.type: "keyword"}
   - match: {columns.3.name: "k8s.pod.network.rx"}
@@ -89,7 +89,7 @@ load a document:
   - length: {values: 1}
   - length: {values.0: 7}
   - match: {values.0.0: "2021-04-28T18:50:23.142Z"}
-  - match: {values.0.1: "<unsupported>"}
+  - match: {values.0.1: "10.10.55.3"}
   - match: {values.0.2: "dog"}
   - match: {values.0.3: 530600088}
   - match: {values.0.4: 1434577921}
