--- a/x-pack/plugin/security/qa/multi-cluster/build.gradle
+++ b/x-pack/plugin/security/qa/multi-cluster/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'elasticsearch.bwc-test'
 
 dependencies {
   clusterModules(project(":modules:analysis-common"))
+  clusterModules project(':x-pack:plugin:ccr')
   clusterModules(project(":modules:reindex")) // need for deleting transform jobs
   clusterModules(project(":x-pack:plugin:transform"))
 }
