--- a/x-pack/plugin/security/qa/multi-cluster/src/javaRestTest/resources/roles.yml
+++ b/x-pack/plugin/security/qa/multi-cluster/src/javaRestTest/resources/roles.yml
@@ -18,3 +18,13 @@ transform_remote_shared_index:
     - names: [ 'shared-transform-index' ]
       privileges: [ 'read', 'read_cross_cluster', 'view_index_metadata' ]
       clusters: [ 'my_*' ]
+
+ccr_user_role:
+  cluster: [ 'manage_ccr', 'monitor' ]
+  indices:
+    - names: [ 'follower*', 'metrics-*' ]
+      privileges: [ 'monitor', 'read', 'write', 'manage_follow_index' ]
+  remote_indices:
+    - names: [ 'leader-index', 'metrics-*' ]
+      privileges: [ 'monitor', 'read' ]
+      clusters: [ "*" ]
