--- a/docs/changelog/131828.yaml
+++ b/docs/changelog/131828.yaml
@@ -1,5 +1,5 @@
 pr: 131828
-summary: ES|QL approximate query execution
-area: "esql, Machine Learning"
+summary: ES|QL approximate analytical queries
+area: ES|QL
 type: feature
 issues: []
